--- a/5/Makefile
+++ b/5/Makefile
@@ -4,7 +4,7 @@ CFLAGS = -Wall -Wextra
 all:
 	@:
 
-5.14 5.15: %: %.o vec.o
+5.14 5.15 5.16: %: %.o inner4.o vec.o
 	$(CC) $(CFLAGS) -o $@ $^
 
 clean:
